--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoLoak">
         <activity
+            android:name=".ui.register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".onboarding.OnBoardingOneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".onboarding.OnBoardingTwoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".onboarding.OnBoardingThreeActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashScreenActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
