--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,6 @@
             android:name=".ui.point.PointActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.PointActivity"
-            android:exported="false" />
-        <activity
             android:name=".ui.history.HistoryActivity"
             android:exported="false" />
         <activity
@@ -40,8 +37,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
